Implemented the code for the playlist selector view.

--- a/Program_Scheduler/Base.lproj/Main.storyboard
+++ b/Program_Scheduler/Base.lproj/Main.storyboard
@@ -965,7 +965,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="yhP-2a-Ir5"/>
+        <segue reference="bxc-P8-u78"/>
         <segue reference="VJB-1d-guM"/>
         <segue reference="OcG-Nk-Drr"/>
     </inferredMetricsTieBreakers>
