Custom playlist selector view displays playlists on tableview.

--- a/Views/PlaylistSelectView.xib
+++ b/Views/PlaylistSelectView.xib
@@ -23,6 +23,9 @@
                     <rect key="frame" x="15" y="20" width="48" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="Cancel"/>
+                    <connections>
+                        <action selector="cancelButtonPressed:" destination="-1" eventType="touchUpInside" id="Mmh-Zr-R51"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select Playlist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n6r-cE-Ac1">
                     <rect key="frame" x="96" y="20" width="182" height="21"/>
