--- a/Program_Scheduler/EventView.xib
+++ b/Program_Scheduler/EventView.xib
@@ -12,6 +12,7 @@
                 <outlet property="contentView" destination="iN0-l3-epB" id="Ic9-bu-VuC"/>
                 <outlet property="dependsLabel" destination="QfY-Xf-bjc" id="kw8-Ya-BdX"/>
                 <outlet property="endDateLabel" destination="P30-fL-hUw" id="CBw-RS-L4g"/>
+                <outlet property="playlistLabel" destination="PaP-0Z-spN" id="dcL-8O-Jfb"/>
                 <outlet property="smallStartDate" destination="Gxy-b3-gEs" id="p9J-jL-nJp"/>
                 <outlet property="startDateLabel" destination="Khl-Tg-VCW" id="twA-de-Sub"/>
                 <outlet property="titleLabel" destination="nj5-tD-94z" id="qYm-FV-m7W"/>
@@ -52,6 +53,12 @@
                     <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Playlist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PaP-0Z-spN">
+                    <rect key="frame" x="16" y="148" width="54" height="20"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.081958590080000004" green="0.29393073260000002" blue="0.28055091469999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
@@ -59,6 +66,8 @@
                 <constraint firstAttribute="trailing" secondItem="P30-fL-hUw" secondAttribute="trailing" constant="16" id="91j-8x-Fap"/>
                 <constraint firstItem="P30-fL-hUw" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Khl-Tg-VCW" secondAttribute="trailing" constant="10" id="BpU-fS-8en"/>
                 <constraint firstItem="QfY-Xf-bjc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="FvC-KP-VQN"/>
+                <constraint firstItem="PaP-0Z-spN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="GHy-aR-Xdg"/>
+                <constraint firstItem="PaP-0Z-spN" firstAttribute="top" secondItem="QfY-Xf-bjc" secondAttribute="bottom" constant="28" id="Icl-Qk-H4n"/>
                 <constraint firstItem="Khl-Tg-VCW" firstAttribute="top" secondItem="nj5-tD-94z" secondAttribute="bottom" priority="750" constant="8" id="MVw-PI-i1e"/>
                 <constraint firstItem="Khl-Tg-VCW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="QWf-xi-ct1"/>
                 <constraint firstItem="nj5-tD-94z" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="WdD-AS-qyW"/>
