--- a/Views/WeatherEditView.xib
+++ b/Views/WeatherEditView.xib
@@ -11,6 +11,8 @@
             <connections>
                 <outlet property="conditionPickerView" destination="eht-C1-1wj" id="cxj-0y-88j"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="eux-Q6-cst"/>
+                <outlet property="deleteButton" destination="sl6-3R-r7Y" id="Qb4-fv-8oB"/>
+                <outlet property="saveButton" destination="pVr-j4-jGJ" id="L2F-vE-UiG"/>
                 <outlet property="temperatureField" destination="ngK-Xu-hO9" id="yqo-qw-8pz"/>
             </connections>
         </placeholder>
@@ -54,10 +56,12 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sl6-3R-r7Y">
-                    <rect key="frame" x="240" y="22" width="64" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sl6-3R-r7Y">
+                    <rect key="frame" x="249" y="22" width="55" height="30"/>
                     <color key="backgroundColor" red="0.81186548219999999" green="0.30760260760000002" blue="0.22455241300000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="55" id="efc-Bd-7h3"/>
+                    </constraints>
                     <state key="normal" title="Delete">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
@@ -65,8 +69,8 @@
                         <action selector="delete:" destination="-1" eventType="touchUpInside" id="96Q-au-Joz"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(Kelvin)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qP8-3C-cmk">
-                    <rect key="frame" x="153" y="87" width="58" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(F)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qP8-3C-cmk">
+                    <rect key="frame" x="153" y="87" width="22" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
@@ -74,6 +78,10 @@
                 </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstItem="sl6-3R-r7Y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="22" id="7TF-7q-VJ2"/>
+                <constraint firstAttribute="trailing" secondItem="sl6-3R-r7Y" secondAttribute="trailing" constant="16" id="c67-O9-RjZ"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="138.75" y="105.63380281690141"/>
         </view>
